Bug 500141 - Application menu appears on the wrong screen for maximised windows
Summary: Application menu appears on the wrong screen for maximised windows
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: appmenu (other bugs)
Version First Reported In: 6.3.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-15 18:30 UTC by Azarilh
Modified: 2025-02-17 19:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
This is a screenshot of both screens. As you can see, the Dolphin on the right has the application menu opened, yet it appeared to the left, on the other screen. (165.97 KB, image/jpeg)
2025-02-15 18:30 UTC, Azarilh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Azarilh 2025-02-15 18:30:26 UTC
Created attachment 178407 [details]
This is a screenshot of both screens. As you can see, the Dolphin on the right has the application menu opened, yet it appeared to the left, on the other screen.

SUMMARY

I have two screens, and if i have a maximised window on the right screen, upon opening the application menu, the menu apepars on the screen on the left, and it breaks my flow.


STEPS TO REPRODUCE
1. Connect two displays.
2. Maximise a window on the right screen, regardless whether it's primary or not.
3. Open the application menu.

OBSERVED RESULT
The menu appears on the screen to the left.


EXPECTED RESULT
It should appear on the same display on the window.


SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20250211
KDE Plasma Version: 6.3.0
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.2
Kernel Version: 6.13.1-1-default (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7700 8-Core Processor
Memory: 30.5 GiB of RAM
Graphics Processor 1: AMD Radeon RX 7900 GRE
Graphics Processor 2: AMD Radeon Graphics
Manufacturer: ASUS


ADDITIONAL INFORMATION
The application menu appears correctly for non-maximised windows.
Comment 1 Vlad Zahorodnii 2025-02-17 14:12:43 UTC
It doesn't appear on the wrong screen on my machine, but I can confirm that it's misplaced.
Comment 2 Bug Janitor Service 2025-02-17 17:42:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5217
Comment 3 Vlad Zahorodnii 2025-02-17 19:04:47 UTC
Git commit 409ed7cdf8d1ede7c3d873b215c85287cb2dce96 by Vlad Zahorodnii.
Committed on 17/02/2025 at 18:42.
Pushed by vladz into branch 'master'.

appmenu: Place appmenu in the top left screen corner

Popups use global coordinates internally, which are unsupported on
wayland. If there's an output at (0, 0), everything's should be okay;
otherwise the behavior is undefined.

M  +8    -2    appmenu/appmenu.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/409ed7cdf8d1ede7c3d873b215c85287cb2dce96
Comment 4 Azarilh 2025-02-17 19:06:43 UTC
Thank you for your quick fix! KDE is awesome!
Comment 5 Vlad Zahorodnii 2025-02-17 19:57:36 UTC
Git commit 0524b77baf1b2e28f9811a2c4713590e16519a82 by Vlad Zahorodnii.
Committed on 17/02/2025 at 19:29.
Pushed by vladz into branch 'Plasma/6.3'.

appmenu: Place appmenu in the top left screen corner

Popups use global coordinates internally, which are unsupported on
wayland. If there's an output at (0, 0), everything's should be okay;
otherwise the behavior is undefined.


(cherry picked from commit 409ed7cdf8d1ede7c3d873b215c85287cb2dce96)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>

M  +8    -2    appmenu/appmenu.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/0524b77baf1b2e28f9811a2c4713590e16519a82