appmenu: Place appmenu in the top left screen corner

Popups use global coordinates internally, which are unsupported on
wayland. If there's an output at (0, 0), everything's should be okay;
otherwise the behavior is undefined.

BUG: 500141


(cherry picked from commit 409ed7cdf8d1ede7c3d873b215c85287cb2dce96)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>